# owner-pre-commit

./: .gitignore  .pre-commit-hooks.yaml  README.md  scan.py  setup.cfg
hooks/: main.py
print_arguments/: main.py
print_arguments.egg-info/: SOURCES.txt  top_level.txt
test-hook-in-this-dir/: .pre-commit-hooks.yml
the-hook/: setup.cfg
the-hook/print_arguments.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
z_test/: .pre-commit-config.yaml
