[metadata]
name = add-resource-owner
version = 1.0.0
description = A pre-commit hook to update Terraform .tfvars owner field
author = Adex
author_email = support@adex.ltd
url = https://github.com/soocrates/owner-pre-commit

[options]
packages = find:

[options.entry_points]
console_scripts =
    add-resource-owner = hooks.main:main